--- a/roles/databases/tasks/main.yml
+++ b/roles/databases/tasks/main.yml
@@ -2,13 +2,8 @@
 - name: install databases
   homebrew:
     name: [
-      "unixodbc",
-      "psqlodbc",
       "postgresql",
-      "mysql",
-      "redis",
-      "memcached",
-      "rabbitmq",
+      "redis"
     ]
     state: present
   tags:
