--- a/roles/caskapps/tasks/main.yml
+++ b/roles/caskapps/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create directory for installed apps
   file:
-    path: "-{{ macbook_user }}/Applications"
+    path: "-{{ macbook_user.stdout }}/Applications"
     state: directory
     mode: 0775
   tags:
