--- a/roles/fleetnation/tasks/main.yml
+++ b/roles/fleetnation/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Clone Rbenv
-  git: repo=git@github.com:picfair/fleetnation.git dest=~{{ macbook_user }}/fleetnation
+  git: repo=git@github.com:picfair/fleetnation.git dest=~{{ macbook_user.stdout }}/fleetnation
   tags:
     - fleetnation
 
 - name: copy makefile
   copy:
     src: Makefile
-    dest: ~{{ macbook_user }}/fleetnation/
+    dest: ~{{ macbook_user.stdout }}/fleetnation/
