--- a/setup.yml
+++ b/setup.yml
@@ -2,9 +2,9 @@
 - name: Setup MacBook for a rich development environment
   hosts: all
   vars:
-    macbook_user: 'picfair'
-    ruby_version: '2.6.6'
+    ruby_version: '2.7.4'
   roles:
+    - { role: whoami, tags: always }
     - { role: geerlingguy.homebrew, tags: initialize }
     - { role: initialize, tags: initialize }
     - { role: terminal, tags: terminal }
