--- a/roles/caskapps/tasks/main.yml
+++ b/roles/caskapps/tasks/main.yml
@@ -1,17 +1,19 @@
 ---
 - name: Create directory for installed apps
   file:
-    path: "-{{ macbook_user.stdout }}/Applications"
+    path: "~{{ macbook_user.stdout }}/Applications"
     state: directory
     mode: 0775
   tags:
     - caskapps
 
 - name: install cask apps
+  become: true
+  become_user: "{{ brew_user.stdout }}"
   homebrew_cask:
     name: "{{ item }}"
     state: present
-    install_options: "appdir=$HOME/Applications/"
+    install_options: "appdir=~{{ macbook_user.stdout }}/Applications/"
   with_items:
     - "vlc"
     - "firefox"
