add vscode snippets role

--- a/setup.yml
+++ b/setup.yml
@@ -13,3 +13,4 @@
     - { role: elastic, tags: elastic }
     - { role: zsh, tags: zsh }
     - { role: rails, tags: rails }
+    - { role: vscode, tags: vscode }
