--- a/roles/webdev/tasks/main.yml
+++ b/roles/webdev/tasks/main.yml
@@ -9,29 +9,23 @@
   tags:
     - webdev
 
-# - name: install python packages
-#   homebrew:
-#     name: [
-#       "pipenv",
-#       "pyenv",
-#       "pyenv-virtualenv",
-#       "pyenv-virtualenvwrapper",
-#       "autopep8",
-#       "flake8",
-#     ]
-#     state: present
-#   tags:
-#     - webdev
-
 - name: install Node and yarn
   homebrew:
     name: [
-      "node@14",
+      "node@16",
       "yarn",
     ]
     state: present
   tags:
     - webdev
 
-- name: link node14
-  shell: brew link --overwrite node@14
+- name: link node16
+  shell: brew link --overwrite node@16
+
+- name: Install vercel, netlify
+  npm:
+    name:  "{{ item }}"
+    global: yes
+  with_items:
+    - "vercel"
+    - "netlify-cli"
