--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -57,9 +57,12 @@
     line: export PATH="{{ python_location.stdout }}/bin/:$PATH"
 
 - name: copy iterm profiles
-  copy:
-    src: iterm.json
-    dest: ~{{ macbook_user.stdout }}/Library/Application Support/iTerm2/DynamicProfiles
+  template:
+    src: iterm.json.j2
+    dest: ~{{ macbook_user.stdout }}/Library/Application Support/iTerm2/DynamicProfiles/iterm.json
 
 - name: source zshrc
   shell: source ~/.zshrc
+
+- name: set default iterm profile
+  shell: echo -e "\033]50;SetProfile=coffee\a"
