--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -35,6 +35,7 @@
     - "ms-vscode.vscode-typescript-tslint-plugin"
     - "ChakrounAnas.turbo-console-log"
     - "humao.rest-client"
+    - "holroyd.jinja"
 
 - name: copy vscode profile
   copy:
