--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -39,6 +39,11 @@
     src: server/cerico.zsh-theme
     dest: ~{{ macbook_user.stdout }}/.oh-my-zsh/themes/cerico.zsh-theme
 
+- name: Copy zsh theme ii
+  copy:
+    src: server/cerico-w-user.zsh-theme
+    dest: ~{{ macbook_user.stdout }}/.oh-my-zsh/themes/cerico-w-user.zsh-theme
+
 - name: change user shell to zsh 
   become: true
   become_user: root
