--- a/roles/caskapps/tasks/main.yml
+++ b/roles/caskapps/tasks/main.yml
@@ -1,11 +1,9 @@
 ---
 - name: Create directory for installed apps
   file:
-    path: "~{{ macbook_user.stdout }}/Applications"
+    path: "~{{ brew_user.stdout }}/Applications"
     state: directory
     mode: 0775
-  tags:
-    - caskapps
 
 - name: install cask apps
   become: true
@@ -13,7 +11,6 @@
   homebrew_cask:
     name: "{{ item }}"
     state: present
-    install_options: "appdir=~{{ macbook_user.stdout }}/Applications/"
   with_items:
     - "hpedrorodrigues/tools/dockutil"
     - "vlc"
@@ -27,5 +24,3 @@
     - "visual-studio-code"
     - "brave-browser"
     - "google-chrome"
-  tags:
-    - caskapps
