--- a/setup.yml
+++ b/setup.yml
@@ -9,10 +9,10 @@
     - { role: terminal, tags: terminal }
     - { role: databases, tags: databases }
     - { role: webdev, tags: webdev }
-    - { role: caskapps, tags: caskapps, mini }
+    - { role: caskapps, tags: [caskapps, mini] }
     - { role: elastic, tags: elastic }
-    - { role: zsh, tags: zsh, mini }
+    - { role: zsh, tags: [zsh, mini] }
     - { role: rails, tags: rails }
-    - { role: vscode, tags: vscode, mini }
-    - { role: dock, tags: dock, mini }
+    - { role: vscode, tags: [vscode, mini] }
+    - { role: dock, tags: [dock, mini] }
     - { role: mini, tags: mini }
