--- a/roles/initialize/tasks/main.yml
+++ b/roles/initialize/tasks/main.yml
@@ -32,8 +32,61 @@
       "tree",
       "ffmpeg",
       "shared-mime-info",
+      "nginx",
+      "graphviz",
+      "node@16",
+      "yarn",
+      "zsh",
+      "zsh-completions",
+      "zsh-autosuggestions",
+      "zsh-syntax-highlighting",
+      "direnv",
+      "watch",
+      "nmap",
+      "htop",
+      "tmux",
+      "postgresql",
+      "redis"
     ]
     state: present
+
+- name: link node16
+  shell: brew link --overwrite node@16
+
+- name: Create directory for installed caskapps
+  file:
+    path: "~{{ brew_user.stdout }}/Applications"
+    state: directory
+    mode: 0775
+
+- name: install cask apps
+  become: true
+  become_user: "{{ brew_user.stdout }}"
+  homebrew_cask:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - "hpedrorodrigues/tools/dockutil"
+    - "vlc"
+    - "firefox"
+    - "alfred"
+    - "iterm2"
+    - "vagrant"
+    - "vagrant-manager"
+    - "tunnelblick"
+    - "slack"
+    - "visual-studio-code"
+    - "brave-browser"
+    - "google-chrome"
+
+- name: Install vercel, netlify
+  npm:
+    name:  "{{ item }}"
+    global: yes
+  with_items:
+    - "vercel"
+    - "netlify-cli"
+    - "railway"
 
 - name: pip install jmespath
   shell: pip3 install jmespath
