--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
 hostfile = hosts
-interpreter_python = /usr/local/bin/python3
+interpreter_python = auto_silent
+host_key_checking = False
