--- a/roles/install/tasks/darwin.yml
+++ b/roles/install/tasks/darwin.yml
@@ -8,6 +8,7 @@
   with_items:
     - "homebrew/services"
     - "homebrew/cask"
+  when: ansible_os_family == "Darwin"
 
 - name: install core packages
   become: true
@@ -34,7 +35,7 @@
       "shared-mime-info",
       "nginx",
       "graphviz",
-      "node@16",
+      "node@{{ node_version }}",
       "yarn",
       "zsh",
       "zsh-completions",
@@ -49,15 +50,14 @@
       "redis"
     ]
     state: present
-
-- name: link node16
-  shell: brew link --overwrite node@16
+  when: ansible_os_family == "Darwin"
 
 - name: Create directory for installed caskapps
   file:
     path: "~{{ brew_user.stdout }}/Applications"
     state: directory
     mode: 0775
+  when: ansible_os_family == "Darwin"
 
 - name: install cask apps
   become: true
@@ -73,11 +73,17 @@
     - "iterm2"
     - "vagrant"
     - "vagrant-manager"
+    - "virtualbox"
     - "tunnelblick"
     - "slack"
     - "visual-studio-code"
     - "brave-browser"
     - "google-chrome"
+    - "chromium"
+  when: ansible_os_family == "Darwin"
+
+- name: source zshenv so we get /usr/local/bin for npm
+  shell: source ~/.zshenv
 
 - name: Install vercel, netlify
   npm:
@@ -94,3 +100,8 @@
 - name: Set a hostname
   ansible.builtin.hostname:
     name: kelso
+  when: ansible_os_family == "Darwin"
+
+- name: link node
+  shell: /usr/local/bin/brew link --overwrite node@{{ node_version }}
+
