update keys role to be able to specify key

--- a/host_vars/example.yml
+++ b/host_vars/example.yml
@@ -2,6 +2,6 @@ ansible_user: "alison"
 ansible_connection: local
 ansible_connection: ssh
 users:
-  - cerico@kelso
-  - cityguessr@kelso
-  - alison@raspberrypi
+  - { username: cerico@kelso }
+  - { username: cityguessr@kelso, userkey: ~/.ssh/city/id_rsa.pub' }
+  - { username: alison@raspberrypi }
