--- a/keys.yml
+++ b/keys.yml
@@ -1,9 +1,11 @@
 ---
 - hosts: localhost
   connection: local
+  vars:
+    default_key: '~/.ssh/id_rsa.pub'
   tasks:
     - debug:
         var: users
     - name: Set up ssh key login for user
-      shell: "ssh-copy-id -i ~/.ssh/id_rsa.pub {{ item }}"
+      shell: "ssh-copy-id -i {{ item.userkey | default(default_key) }} {{ item.username }}"
       with_items: "{{ users }}"
