--- a/roles/terminal/tasks/debian.yml
+++ b/roles/terminal/tasks/debian.yml
@@ -33,3 +33,22 @@
 
 - name: set default iterm profile
   shell: echo -e "\033]50;SetProfile=liege\a"
+
+- name: copy motd
+  copy:
+    src: motd
+    dest: /etc/profile.d/motd.sh
+  become: true
+  become_user: root
+
+- name: Add motd to path.
+  lineinfile:
+    path: ~/.zshrc
+    line: sh /etc/profile.d/motd.sh
+
+- name: Copy nginx html
+  copy:
+    src: nginx.html
+    dest: /var/www/html/index.nginx-debian.html
+  become: true
+  become_user: root
