feat: Added gitconfig to aliases role

--- a/roles/aliases/tasks/main.yml
+++ b/roles/aliases/tasks/main.yml
@@ -5,3 +5,8 @@
 - name: configure terminal for pi
   import_tasks: debian.yml
   when: ansible_os_family == "Debian"
+
+- name: Copy gitconfig
+  template:
+    src: gitconfig.j2
+    dest: ~{{ macbook_user.stdout }}/.gitconfig
