--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -8,6 +8,7 @@
     - "aregghazaryan.glass-ui"
     - "dbaeumer.vscode-eslint"
     - "gerane.Theme-zombiesatemyneighbors"
+    - "tinkertrain.theme-panda"
     - "johnpapa.vscode-peacock"
     - "juhakokkonen.py-light"
     - "karunamurti.haml"
