feat: add github copilot extension

--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -3,6 +3,7 @@
   shell: "code --install-extension {{ item }}"
   with_items:
     - "astro-build.astro-vscode"
+    - "GitHub.copilot"
     - "styled-components.vscode-styled-components"
     - "abalejr.forest-focus"
     - "aregghazaryan.glass-ui"
