--- a/host_vars/example.yml
+++ b/host_vars/example.yml
@@ -2,5 +2,5 @@ ansible_user: "alison"
 ansible_connection: local
 users:
   - { username: cerico@kelso }
-  - { username: cityguessr@kelso, userkey: ~/.ssh/city/id_rsa.pub' }
+  - { username: cityguessr@kelso, userkey: ~/.ssh/city/id_rsa.pub }
   - { username: alison@raspberrypi }
