fix: remove need to ask-become-pass, and use inventory_hostname

--- a/roles/install/tasks/darwin.yml
+++ b/roles/install/tasks/darwin.yml
@@ -108,7 +108,7 @@
 
 - name: Set a hostname
   ansible.builtin.hostname:
-    name: "{{ hostname }}"
+    name: "{{ inventory_hostname }}"
   when: ansible_os_family == "Darwin"
 
 - name: link node
