--- a/roles/install/tasks/debian.yml
+++ b/roles/install/tasks/debian.yml
@@ -86,7 +86,7 @@
   ansible.builtin.lineinfile:
     path: /etc/hosts
     search_string: '127.0.0.1'
-    line: 127.0.0.1 {{ hostname }}
+    line: 127.0.0.1 {{ inventory_hostname }}
     owner: root
     group: root
     mode: '0644'
@@ -98,7 +98,7 @@
   ansible.builtin.lineinfile:
     path: /etc/cloud/templates/hosts.debian.tmpl
     search_string: '127.0.0.1'
-    line: 127.0.0.1 {{ hostname }}
+    line: 127.0.0.1 {{ inventory_hostname }}
     owner: root
     group: root
     mode: '0644'
@@ -107,4 +107,4 @@
   become: true
   become_user: root
   ansible.builtin.hostname:
-    name: "{{ hostname }}"
+    name: "{{ inventory_hostname }}"
