--- a/remote_login.yml
+++ b/remote_login.yml
@@ -3,7 +3,7 @@
   hosts: [debian]
   vars_prompt:
     - name: "user_password"
-      prompt: "Enter a password for the user"
+      prompt: "Enter a password for user that will sudo"
       private: yes
       encrypt: "md5_crypt" #need to have python-passlib installed in local machine before we can use it        
       confirm: yes
